--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <div class="container">
-      <h1 class="page-header">JukeBox</h1>
+      <h1 class="page-header">JukeBox Experiment</h1>
 
       <div class="row">
 
@@ -33,6 +33,7 @@
         </section>
 
       </div>
+
 
       <!-- Messages -->
       <div id="message" class="alert alert-info">
